--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <script>
    function as() {
    let e = document.getElementsByClassName('search-text').inputs.value
-   window.location.href = `https://icp.jiyu134.top/data/${e}.html
+   window.location.href = `https://icp.jiyu134.top/data/${e}.html`
     console.log("fsfs",e)
    }
 </script>
