--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN" dir="ltr">
- 
+<script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id:"K9VgVPX0IEKpkXI1",ck:"K9VgVPX0IEKpkXI1"})</script>
 <head>
     <meta charset="utf-8">
     <title> MCicp备案 </title>
