--- a/comein/index.html
+++ b/comein/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
           background-image: url('https://www.z4a.net/images/2023/08/06/2023-01-23_19.46.00.png');
-          background-repeat: no-repeat;
+          background-attachment: fixed;
         }
     
         a:link, a:visited {
