--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		</ul>
 	</div>
 	</table>
-    <p style="color:rgb(255, 255, 255);align="center">温馨提示：请在输入框内输入7位有效数字 </p>
+    <p style="color:rgb(255, 255, 255);align="center">温馨提示：请在输入框内输入7位有效数字。什么？找不到？就是那个蓝色圆圆的，点一下就出现输入框了。 </p>
 	<p style="color:rgb(255, 255, 255);align="center">©2023 By jiyu134 </p>
 </body>
 <script>
